# otto-crypt

./: CHANGELOG.md  CONTRIBUTING.md  README-OTTO.md  README.md
android/: .dockerignore  Dockerfile  README.md  docker-compose.yml  ops-DOCKER-README.md  settings.gradle
android/app/: README.md  build.gradle
android/otto-crypt-android-demo/: build.gradle
android/ottocrypt-android/: build.gradle
c/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
c#/: OttoCryptDemo.sln  README.md
c#/OttoCrypt.Demo/: OttoCrypt.Demo.csproj  Program.cs
c/demo/: CMakeLists.txt  README.md  demo.c
c/lib/: CMakeLists.txt
c/lib/apps/: otto_cli.c
c/lib/include/otto/: otto.h
c/lib/src/: otto.c
c/samples/: readme.txt
cpp/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cpp/apps/: otto_cli.cpp
cpp/demo/: README.md  otto_demo.cpp
cpp/samples/: readme.txt
cpp/src/: openssl_utils.hpp
flutter/: README.md  pubspec.yaml
flutter/lib/: generated_dummy.dart  main.dart
go/: Dockerfile  README.md  docker-compose.yml
go/demo/: README.md  main.go
java/: Dockerfile  README.md  docker-compose.yml  pom.xml
laravel/: .dockerignore  .env  .gitignore  DOCKER-README.md  Dockerfile  README.md  composer.json  conf.ini  docker-compose.yml  ops-DOCKER-README.md
laravel-test/: README.md
nodejs/: .gitignore  README.md  package.json  server.js
python/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ops-DOCKER-README.md
rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
swift/: Package.swift  README.md
(+43 files in other folders)
